# fastapi-cli

./: CHANGELOG.txt  LICENSE  README.md  pyproject.toml  setup.py
fastapicli/: cli.py  default_py_content.py  generate_docker.py  generate_project.py  generate_utils.py  utils.py
fastapicli/scripts/: base.py
