[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_cli_VissaMoutafis"
version = "0.0.1"
authors = [
  { name="VissaMoutafis", email="vissarionm2000@gmail.com" },
]
description = "Light CLI for automating basic FastAPI development tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VissaMoutafis/fastapi-cli"
"Bug Tracker" = "https://github.com/VissaMoutafis/fastapi-cli/issues"